GitHub action setup

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
+		"STORY------------------------------------------------------": "",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
 		"chromatic": "npx chromatic --project-token=chpt_cf66e39929dbe9a"
