--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"STORY------------------------------------------------------": "",
 		"story": "storybook dev -p 6006",
-		"build-story": "storybook build",
+		"build-storybook": "storybook build",
 		"chromatic": "npx chromatic --project-token=chpt_cf66e39929dbe9a"
 	},
 	"type": "module",
