--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,24 @@
-// ---
-// --- [VS-CODE] [LAUNCH.json]
-// ---
+// -0
+// -0 [VS-CODE] [LAUNCH.json]
+// -0
 // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 // https://code.visualstudio.com/docs/nodejs/nodejs-debugging
 {
 	"version": "0.2.0",
 	"configurations": [
 		{
+			// https://www.codelantis.com/blog/sveltekit-server-debugging-vscode-webstorm
+			"command": "pnpm vavite-loader vite dev --port 3000",
+			"name": "Launch SvelteKit server", // -0
+			"request": "launch",
+			"type": "node-terminal"
+		},
+		{
 			"type": "node",
-			"name": "💀 SVELTEKIT - debug via npm", // $$$
+			"name": "💀 SVELTEKIT - debug via npm", // -1
 			"request": "launch",
 			"cwd": "${workspaceFolder}",
-			"runtimeExecutable": "npm",
+			"runtimeExecutable": "pnpm", // npm
 			"runtimeArgs": ["run-script", "dev"]
 		}
 	]
