--- a/package.json
+++ b/package.json
@@ -61,13 +61,11 @@
 		"firebase": "^9.22.1"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.34.3",
-		"@sveltejs/adapter-static": "next",
 		"@firebase/rules-unit-testing": "^2.0.7",
-		"@splidejs/svelte-splide": "^0.2.9",
 		"@fontsource/material-icons": "^5.0.2",
 		"@fontsource/roboto": "^5.0.2",
 		"@mdi/js": "^7.2.96",
+		"@playwright/test": "^1.34.3",
 		"@smui-extra/accordion": "^6.1.4",
 		"@smui-extra/autocomplete": "^6.2.0",
 		"@smui-extra/badge": "^6.1.4",
@@ -104,6 +102,7 @@
 		"@smui/tooltip": "^6.1.4",
 		"@smui/top-app-bar": "7.0.0-beta.8",
 		"@smui/touch-target": "^6.1.4",
+		"@splidejs/svelte-splide": "^0.2.9",
 		"@storybook/addon-a11y": "^7.0.18",
 		"@storybook/addon-actions": "^7.0.18",
 		"@storybook/addon-essentials": "^7.0.18",
@@ -116,10 +115,12 @@
 		"@storybook/test-runner": "^0.10.0",
 		"@storybook/testing-library": "^0.1.0",
 		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "^1.20.2",
 		"@sveltejs/vite-plugin-svelte": "^2.4.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.9",
 		"@typescript-eslint/parser": "^5.59.9",
+		"@vavite/node-loader": "^1.8.1",
 		"autoprefixer": "^10.4.14",
 		"chromatic": "^6.18.0",
 		"eslint": "^8.42.0",
